K1J-2275: Make integration-hsa-v2 -> integration-hsa and remove spring profile "hsav2" (#14)